Add same crashguard as in afterWidthChanged()

BUG: 315024
FIXED-IN: 4.10.3